objects/TagConfig__c.object
<CustomObject>
    <fields>
        <fullName>SObjectConfig__c</fullName>
        <label>SObjectConfig</label>
        <referenceTo>SObjectConfig__c</referenceTo>
        <relationshipLabel>TagConfigs</relationshipLabel>
        <relationshipName>TagConfigs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TagLabel__c</fullName>
        <label>TagLabel</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TagConfig</label>
    <nameField>
        <displayFormat>TAG-{0000}</displayFormat>
        <label>TagConfig Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TagConfigs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>